<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <scu.miomin.com.keeper.myview.ReboundScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/qianhui"
        android:fadingEdge="vertical"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_top_tab_three"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/white" />

                        <scu.miomin.com.keeper.myview.XCRoundImageView
                            android:layout_width="76dp"
                            android:layout_height="76dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/head" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="莫绪旻"
                        android:textColor="@color/naibai"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvUserphone_top"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="180****3926"
                        android:textColor="@color/naibai"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/zhifu" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/zhifuguanli"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:src="@color/qianhui" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/settings" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/xitongshezhi"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:src="@color/qianhui" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/anquan" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/anquanzhongxin"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:src="@color/qianhui" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/help" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/bangzhuzhongxin"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:src="@color/qianhui" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/words_with_friends" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/guanyuwomen"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:src="@color/qianhui" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_write_to_grey"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/quit" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/tuichudenglu"
                            android:textColor="@color/qianhei"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </scu.miomin.com.keeper.myview.ReboundScrollView>

</LinearLayout>